# VDDSound

./: .gitignore  CMakeLists.txt  LICENSE  README.md  spec.md
cmake/: toolchain-mingw-i686.cmake
defs/: ntvdm.def
docs/: ARCHITECTURE.md  README.md  STATUS.md
scripts/: build.sh  install.bat  install.reg  redeploy.bat
src/: audio_out.c  audio_out.h  common.h  crt0.c  logger.c  logger.h  midi_module.c  midi_module.h  opl_module.c  opl_module.h  sb_module.c  sb_module.h  vdd_entry.c
